Converter code smells